@@ -1,3 +1,8 @@
+2017-11-24  Markus Gans  <guru.mail@muenster.de>
+	* Detects Linux console font with 512 characters and 
+	  reduces the number of colors to 8
+	* Color palette defined for 8 colors
+
 2017-11-23  Markus Gans  <guru.mail@muenster.de>
 	* Remove duplicated code from FOptiAttr::changeAttribute
 
